# address-alignment

./: .gitignore  address_alignment.py  address_alignment_new.py  app.py  config.py  data_gen.py  data_prepare.py  demo.py  desc  main.py  models_def.py  pixi.toml  preprocess.py  prompt.jinja2  pyproject.toml  sql_import.py  token_classification.py  train.py
data/raw/: correct_data.jsonl  data.jsonl  data.txt  new_data.jsonl  raw_data.jsonl
others/: address-alignment.drawio  demo.drawio  地址对齐.md  项目串讲.txt
prompts/: prompt.jinja2
templates/: index.html
