[project]
name = "address-alignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.1.1",
    "fastapi>=0.117.1",
    "openai>=1.109.1",
    "pymysql>=1.1.2",
    "rapidfuzz>=3.14.1",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "uvicorn>=0.37.0",
]
